styles.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    margin: 0;
}

.container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 20px;
}

.card {
    width: 200px;
    height: 150px;
    background-color: #ccc;
    border-radius: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}


.card.selected {
    border: 6px solid black;
}

#message-container {
    font-size: 36px;
    font-weight: bold;
    text-align: center;
    background-color: white;
    color: black;
    padding: 10px 20px;
    /* margin-bottom: 20px; */
}
#top {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 999;
    width: 100%;
    height: 23px;
}

